--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TASTI</title>
-       <link rel="icon" href="img_accueil/logo.png" type="img_accueil/png">
+       <link rel="icon" href="logo.png" type="img_accueil/png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="script.js"></script>
