--- a/accueil.html
+++ b/accueil.html
@@ -5,14 +5,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TASTI</title>
-       <link rel="icon" href="logo.png" type="img_accueil/png">
+       <link rel="icon" href="logo.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <script src="script.js"></script>
 </head>
 <body>
   <header id="header">
-      <img id="logo" src="img_accueil\logo.png" alt="">
+      <img id="logo" src="logo.png" alt="">
       <nav id="top-nav">
       <a class="hl" href="inscription.php">S'inscrire</a>
       <a class="hl" href="connexion.php">Se connecter</a>
@@ -25,19 +25,19 @@
   </section>
  <section>
         <figure>
-            <a href="connecte.php"><img class="zoom" src="image/wolf.png" alt="Wallys Wolf"></a>
+            <a href="connecte.php"><img class="zoom" src="wolf.png" alt="Wallys Wolf"></a>
             <figcaption>Wallys Wolf - SUV de luxe</figcaption>
         </figure>
         <figure>
-            <a href="connecte.php"> <img class="zoom" src="image/iris.png" alt="Wallys Iris"></a>
+            <a href="connecte.php"> <img class="zoom" src="iris.png" alt="Wallys Iris"></a>
             <figcaption>Wallys Iris - Compacte électrique</figcaption>
         </figure>
         <figure>
-            <a href="connecte.php"> <img class="zoom" src="image/216.png" alt="Wallys 216"></a>
+            <a href="connecte.php"> <img class="zoom" src="216.png" alt="Wallys 216"></a>
             <figcaption>Wallys 216 - Berline éco-friendly</figcaption>
         </figure>
         <figure>
-            <a href="connecte.php"> <img class="zoom" src="image/719.png" alt="Wallys 719"></a>
+            <a href="connecte.php"> <img class="zoom" src="719.png" alt="Wallys 719"></a>
             <figcaption>Wallys 719 - Coupé sportif</figcaption>
         </figure>
     </section>
